WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211433
Async overflow scroll: sometimes a <select> becomes non-scrollable
https://bugs.webkit.org/show_bug.cgi?id=211433
Summary
Async overflow scroll: sometimes a <select> becomes non-scrollable
Simon Fraser (smfr)
Reported
2020-05-04 21:56:42 PDT
Sometimes, after scrolling a <select> listbox (like the Component list when filing a new bug here), you hit the end and the page rubber bands, and then you can't scroll it any more.
Attachments
Patch
(17.76 KB, patch)
2020-05-08 16:13 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-04 21:57:03 PDT
<
rdar://problem/62338474
>
Simon Fraser (smfr)
Comment 2
2020-05-04 22:01:02 PDT
To reproduce, you have to hit the top of the listbox and trigger a rubber band on the main page. Then we latch to the main page and never let go.
Simon Fraser (smfr)
Comment 3
2020-05-08 16:13:13 PDT
Created
attachment 398904
[details]
Patch
Simon Fraser (smfr)
Comment 4
2020-05-08 17:21:42 PDT
https://trac.webkit.org/changeset/261427/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug